# lug-manager

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  CMakeLists.txt  CMakePresets.json  DOCKER.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: docker.yml  release.yml
.zap/: rules.tsv
scripts/: build_css.sh
sql/migrations/: 001_initial.sql  002_add_chapters.sql  003_add_settings.sql  004_add_roles.sql  005_add_chapter_lead_role.sql  006_add_scope.sql  007_add_event_lead.sql  008_add_chapter_member_role.sql  009_add_chapter_message_id.sql  010_add_lug_message_id.sql  011_add_ping_role_ids.sql  012_remove_member_chapter_id.sql  013_remove_event_type.sql  014_meeting_discord_message_ids.sql  015_attendance_virtual.sql  016_add_google_calendar_event_id.sql  017_add_tentative_status.sql  018_add_chapter_shorthand.sql  019_fix_event_status_confirmed.sql  020_add_member_names.sql  021_simplify_roles.sql  022_suppress_flags.sql  023_notes_and_report_channels.sql  024_perk_levels.sql  025_event_report_fields.sql  026_optional_discord_id.sql  027_perk_min_fol.sql  028_perk_levels_year.sql  029_member_contact_fields.sql  030_pii_public.sql  031_pii_sharing.sql  032_meeting_virtual.sql  033_pii_per_field.sql  034_checkin_token.sql  035_perk_description.sql  036_audit_log.sql  037_event_day_attendance.sql  038_drop_event_day_attendance_qualifies.sql
src/: main.cpp
src/async/: ThreadPool.cpp  ThreadPool.hpp
src/auth/: AuthService.cpp  AuthService.hpp  SessionStore.cpp  SessionStore.hpp
src/config/: Config.cpp  Config.hpp
src/db/: ChapterRepository.hpp  Migrations.cpp  Migrations.hpp  SqliteDatabase.cpp  SqliteDatabase.hpp
src/integrations/: CalendarGenerator.cpp  CalendarGenerator.hpp  DiscordClient.cpp  DiscordClient.hpp  DiscordOAuth.cpp  DiscordOAuth.hpp  GoogleCalendarClient.cpp  GoogleCalendarClient.hpp
src/middleware/: AuthMiddleware.hpp
src/models/: Attendance.hpp  AuditLog.hpp  Chapter.hpp  ChapterMember.hpp  EventDay.hpp  LugEvent.hpp  Meeting.hpp  Member.hpp  PerkLevel.hpp  RoleMapping.hpp  Session.hpp
src/repositories/: AttendanceRepository.cpp  AttendanceRepository.hpp  AuditLogRepository.cpp  AuditLogRepository.hpp  ChapterMemberRepository.cpp  ChapterMemberRepository.hpp  ChapterRepository.cpp  ChapterRepository.hpp  EventDayAttendanceRepository.cpp  EventDayAttendanceRepository.hpp  EventDayRepository.cpp  EventDayRepository.hpp  EventRepository.cpp  EventRepository.hpp  MeetingRepository.cpp  MeetingRepository.hpp  MemberRepository.cpp  MemberRepository.hpp  PerkLevelRepository.cpp  PerkLevelRepository.hpp  RoleMappingRepository.cpp  RoleMappingRepository.hpp  SettingsRepository.cpp  SettingsRepository.hpp
src/routes/: AttendanceRoutes.cpp  AttendanceRoutes.hpp  AuditRoutes.cpp  AuditRoutes.hpp  AuthRoutes.cpp  AuthRoutes.hpp  CalendarRoutes.cpp  CalendarRoutes.hpp  ChapterRoutes.cpp  ChapterRoutes.hpp  CheckinRoutes.cpp  CheckinRoutes.hpp  EventRoutes.cpp  EventRoutes.hpp  HelpRoutes.cpp  HelpRoutes.hpp  MeetingRoutes.cpp  MeetingRoutes.hpp  MemberRoutes.cpp  MemberRoutes.hpp  PerkRoutes.cpp  PerkRoutes.hpp  RoleRoutes.cpp  RoleRoutes.hpp  Router.cpp  Router.hpp  SettingsRoutes.cpp  SettingsRoutes.hpp
src/services/: AttendanceService.cpp  AttendanceService.hpp  AuditService.hpp  ChapterService.cpp  ChapterService.hpp  EventService.cpp  EventService.hpp  MeetingService.cpp  MeetingService.hpp  MemberService.cpp  MemberService.hpp  MemberSyncService.cpp  MemberSyncService.hpp
src/templates/: layout.html  login.html
src/templates/attendance/: _content.html  _overview.html
src/templates/chapters/: _detail.html  _form.html  _list.html  _members.html
src/templates/checkin/: _page.html
src/templates/dashboard/: _content.html
src/templates/events/: _attendance.html  _content.html  _detail.html  _form.html
src/templates/help/: _content.html
src/templates/meetings/: _attendance.html  _content.html  _detail.html  _form.html
src/templates/members/: _content.html  _form.html  _self_edit.html  _view.html
src/templates/settings/: _audit.html  _content.html  _perks.html  _roles.html
src/utils/: AuditDiff.hpp  MarkdownRenderer.cpp  MarkdownRenderer.hpp
tests/: integration_test_base.hpp  test_discord_content.cpp  test_helper.hpp  test_integration.cpp  test_integration_attendance.cpp  test_integration_attendance2.cpp  test_integration_audit.cpp  test_integration_auth.cpp  test_integration_auth2.cpp  test_integration_chapters.cpp  test_integration_checkin.cpp  test_integration_coverage.cpp  test_integration_events.cpp  test_integration_help.cpp  test_integration_meetings.cpp  test_integration_members.cpp  test_integration_perks2.cpp  test_integration_permissions.cpp  test_integration_settings.cpp  test_integration_settings2.cpp  test_integration_ui.cpp  test_markdown.cpp  test_repositories.cpp  test_role_system.cpp  test_services.cpp  test_suppression.cpp  test_utils.cpp
